# Task-Manager-fastApi-app

./: README.md
backend/: main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/routers/: categories.py  task.py
backend/core/: config.py
backend/db/: session.py
backend/models/: base.py  category.py  task.py
backend/repositories/: category.py  task.py
backend/schemas/: category.py  task.py
backend/services/: category.py  task.py
frontend/public/: index.html
frontend/src/: App.js
