[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nikita200 <Ponomariovnikita02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.3"
uvicorn = "^0.42.0"
pydentic = "^0.0.1.dev3"
psycopg = {extras = ["binary"], version = "^3.3.3"}
sqlalchemy = "^2.0.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
